--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             <h2 class="section-heading text-center">Sobre mi</h2>
             <p class="text-center muted-text mt-3 mb-4">Te invito a conocer mi vida en la tecnología y más allá:</p>
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="200">
-                <div>
-                    <img src="/assets/images/Logo.png" class="img-fluid pic" alt="Logo">
+                <div class="col-lg-5 about-portrait">
+                    <img src="/assets/images/Logo.png" alt="Logo">
                 </div>
                 <div class="col-lg-7">
                     <p class="bio">
