--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <div class="card">
                         <div class="circle-container">
                             <div class="circle"><i class="bi bi-droplet-half"></i></div>
-                        </div>  
+                        </div>
                         <div class="card-body">
                             <p class="card-title">Creatividad Visual</p>
                             <p class="card-text">Me apasiona crear contenido digital y mejorar proyectos visuales. Cuando veo algo que puede optimizarse, disfruto haciéndolo más atractivo y profesional. Presto atención a cada detalle para que el resultado final impacte y transmita lo que quiero comunicar. Mi objetivo es que cada proyecto cuente una historia y capture la atención de quien lo vea.</p>
@@ -171,9 +171,9 @@
             <h2 class="section-heading text-center">Sobre mi</h2>
             <p class="text-center muted-text mt-3 mb-4">Te invito a conocer mi vida en la tecnología y más allá:</p>
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="200">
-                <div class="col-lg-5 about-portrait">
-                    <img src="/assets/images/Logo.png" class="img-fluid pic" alt="Logo">
-                </div>
+                <figure class="col-lg-5 about-portrait">
+                    <img src="/assets/images/Logo.webp" class="img-fluid pic" alt="Logo de Marcos Isar">
+                </figure>
                 <div class="col-lg-7">
                     <p class="bio">
                         Hola, soy Marcos Isar, un apasionado de la tecnología y la creatividad. Desde mis primeros pasos en animación 3D hasta la creación de juegos y entornos interactivos, siempre busco combinar diseño, programación y experiencia digital en proyectos que sorprendan y conecten con las personas.
@@ -245,7 +245,7 @@
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/Maya.png" alt="Maya">
+                        <img class="tool-image" src="/assets/images/tools/Maya.webp" alt="Maya">
                         <p class="tool-name">Maya</p>
                     </div>
                 </div>
@@ -389,6 +389,11 @@
     <script src="assets/js/owl.carousel.min.js" defer></script>
     <script src="assets/js/bootstrap.min.js" defer></script>
     <script src="assets/js/script.js" defer></script>
+
+    <footer class="text-center py-3 mt-5" style="background-color: #222; color: #fff;">
+        &copy; 2026 Marcos Isar. Todos los derechos reservados.
+    </footer>
+
 
 </body>
 </html>
