--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="assets/images/banner.webp">
 
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/Logo.png" type="image/x-icon">
+    <link rel="icon" href="assets/images/Logo.webp" type="image/x-icon">
 
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik&display=swap">
