--- a/index.html
+++ b/index.html
@@ -350,38 +350,57 @@
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="500">
                 <div class="col-lg-8">
                     <div class="contact-form">
-                        <form action="https://formspree.io/f/xldjelqg" method="POST">
+                        <!-- Formulario listo para EmailJS -->
+                        <form id="contactForm">
                             <div class="row g-2">
                                 <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="name" name="name" placeholder="Nombre *" required>
-                                    </div>
+                                    <input type="text" class="form-control" name="name" placeholder="Nombre *" required>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" id="email" name="email" placeholder="Email *" required>
-                                    </div>
+                                    <input type="email" class="form-control" name="email" placeholder="Email *" required>
                                 </div>
                                 <div class="col-md-12">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Contenido *" required>
-                                    </div>
+                                    <input type="text" class="form-control" name="subject" placeholder="Asunto *" required>
                                 </div>
                                 <div class="col-md-12">
-                                    <div class="form-group">
-                                        <textarea style="resize: none;" class="form-control" id="message" name="message" rows="5" placeholder="Tú mensaje *" required></textarea>
-                                    </div>
+                                    <textarea style="resize: none;" class="form-control" name="message" rows="5" placeholder="Tu mensaje *" required></textarea>
                                 </div>
                                 <div class="col-md-12">
                                     <button type="submit" class="btn primary-bg-btn mt-2">Enviar <i class="bi bi-arrow-up-right"></i></button>
                                 </div>
                             </div>
                         </form>
+                        <p id="statusMessage" class="mt-2 text-center"></p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- EmailJS Script: ponlo antes de </body> -->
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script>
+        // Inicializa EmailJS con tu Public Key
+        emailjs.init("template_d623bdh");
+
+        const form = document.getElementById("contactForm");
+        const statusMessage = document.getElementById("statusMessage");
+
+        form.addEventListener("submit", function (e) {
+            e.preventDefault();
+
+            emailjs.sendForm("service_5wt7vnp", "TU_TEMPLATE_ID", this)
+                .then(function () {
+                    statusMessage.textContent = "¡Mensaje enviado correctamente!";
+                    statusMessage.style.color = "green";
+                    form.reset();
+                }, function (error) {
+                    statusMessage.textContent = "Error al enviar el mensaje: " + error.text;
+                    statusMessage.style.color = "red";
+                });
+        });
+    </script>
+
 
     <!-- JavaScript -->
     <script src="assets/js/aos.js" defer></script>
