--- a/index.html
+++ b/index.html
@@ -377,11 +377,9 @@
         </div>
     </section>
 
-    <!-- EmailJS Script: ponlo antes de </body> -->
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
-        // Inicializa EmailJS con tu Public Key
-        emailjs.init("service_5wt7vnp");
+        emailjs.init("WiqnA1eGC0hmNq9mE");
 
         const form = document.getElementById("contactForm");
         const statusMessage = document.getElementById("statusMessage");
